# trading_bot_old

./: .gitignore  LICENSE  README.md  asset.py  config.json  config.py  dataset.py  filter.py  inference.py  interface.py  main.py  model.py  server.py  swftx.py  tf_utils.py  training.py
gui/: build.sh  index.html  main.js  main.tsx  model_performance.tsx  package-lock.json  package.json  positions.js  positions.tsx  price_graphs.tsx  settings.tsx  tabs.tsx  trades.tsx  tsconfig.common.json  tsconfig.json  tsconfig.paths.json  vite.config.ts  webpack.config.js
gui/src/: index.tsx  loop.tsx
gui/src/__tests__/: test.ts
gui/src/assets/styles/: base.css  icons.css  main.css
gui/src/components/ModelPerformance/: index.tsx
gui/src/components/Positions/: index.tsx  positions.css
gui/src/components/PriceGraphs/: index.tsx
gui/src/components/Settings/: index.tsx  settings.css
gui/src/components/Tabs/: index.tsx
gui/src/components/Trades/: index.tsx  trades.css
gui/src/testing/TestFunction/: index.ts
gui/src/utils/: requests.tsx
gui/styles/: base.css  icons.css  main.css
libcrypto/: CMakeLists.txt
libcrypto/src/: assets.c  extract.c  filter.c  json.c  main.c
libcrypto/src/include/: assets.h  config.h  extract.h  filter.h  json.h
model/: dense.py  example.c  example_lstm_working.c  lstm.py  matrix.c  matrix.h  nn_ops.py
model/layers/: activations.c  activations.h  dense.c  dense.h  lstm.c  lstm.h  matrix.c  matrix.h
utils/: assets.py
